output1/source/kubernetes-to-kubernetes-versionchanged/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    io.move2kube.service: web
  name: web
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: web
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
